--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import { Image } from "astro:assets";
+import logo from "../images/logo.png";
 ---
 
 <!doctype html>
@@ -22,7 +23,7 @@
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
         <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <img src="images/logo.png" class="h-14" alt="TechPeople Logo" />
+          <Image src={logo} class="h-14" alt="TechPeople Logo" width={55} height={55} />
           <span class="self-center text-2xl font-semibold whitespace-nowrap"
             ><span class="text-indigo-400">Tech</span>People</span
           >
@@ -128,7 +129,7 @@
         >
           <a href="article.html">
             <img
-              src="images/image1.png"
+              src="/images/image1.png"
               alt="Article Image"
               class="w-full h-auto rounded-2xl"
             />
@@ -166,7 +167,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image2.png"
+                src="/images/image2.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -197,7 +198,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image3.png"
+                src="/images/image3.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -228,7 +229,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image4.png"
+                src="/images/image4.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -259,7 +260,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image5.png"
+                src="/images/image5.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -290,7 +291,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image6.png"
+                src="/images/image6.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -321,7 +322,7 @@
           <div class="bg-white rounded-lg overflow-hidden shadow-lg">
             <a href="article.html">
               <img
-                src="images/image7.png"
+                src="/images/image7.png"
                 alt="Article Image"
                 class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
               />
@@ -411,5 +412,6 @@
           </div>
         </div>
       </div>
-    </footer></body>
+    </footer></body
+  >
 </html>
