--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -87,7 +87,9 @@ import logo from "../images/logo.png";
       </div>
     </nav>
 
-    <slot />
+    <section class="container mx-auto max-w-screen-xl mt-10 px-8">
+      <slot />
+    </section>
 
     <footer class="bg-indigo-900 text-white">
       <div class="container mx-auto mt-10 max-w-screen-xl px-8">
