--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,9 @@
 ---
 import { Image } from "astro:assets";
 import logo from "../images/logo.png";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../constants";
+
+const { title = "Articles, Stories & Tutorials For Tech People" } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,13 +12,14 @@ import logo from "../images/logo.png";
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content={SITE_DESCRIPTION} />
     <meta name="generator" content={Astro.generator} />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.js"
       integrity="sha512-BJ/5sR2hFxQTKin/55JQCcMTObShDBAmVjL/3NR/MVcrhyOazJjAgvROem03+HYyGw16SVdSfoWCFGr9syxAKA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
-    <title>Tech People Blog</title>
+    <title>{SITE_TITLE} - {title}</title>
   </head>
   <body class="">
     <nav class="bg-gray-900 text-white">
