--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -2,8 +2,10 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+import { formatDate, capitalize } from "../../utils";
 
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
+
 ---
 
 <MainLayout>
@@ -26,14 +28,14 @@ const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
               <h2 class="text-2xl font-semibold mb-2">
                 <a href={"/articles" + article.slug}>{article.data.title}</a>
               </h2>
-              <p class="text-gray-600 text-sm mb-4">{article.data.pubDate}</p>
+              <p class="text-gray-600 text-sm mb-4">{formatDate(article.data.pubDate)}</p>
               <div class="flex flex-wrap gap-2">
                 {article.data.tags.map((tag: string, index: number) => (
                   <span
                     class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90
                       ${index % 2 === 0 ? "bg-green-500" : "bg-indigo-500"} flex items-center justify-center`}
                   >
-                    <a href={"/articles/tag/" + tag} class="text-center"></a>{tag}</a>
+                    <a href={"/articles/tag/" + tag} class="text-center"></a>{'#'+capitalize(tag)}</a>
                   </span>
                 ))}
               </div>
