--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -4,7 +4,9 @@ import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { formatDate, capitalize } from "../../utils";
 
-const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
+const allBlogArticles: CollectionEntry<"blog">[] = ( await getCollection("blog"))
+  .sort((a: CollectionEntry<'blog'>, b: CollectionEntry<'blog'>) => 
+  b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
 ---
 
