--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,8 +1,8 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
+import ArticleCard from "../../components/ArticleCard.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
-import { formatDate, capitalize } from "../../utils";
 
 const allBlogArticles: CollectionEntry<"blog">[] = ( await getCollection("blog"))
   .sort((a: CollectionEntry<'blog'>, b: CollectionEntry<'blog'>) => 
@@ -17,33 +17,7 @@ const allBlogArticles: CollectionEntry<"blog">[] = ( await getCollection("blog")
     <!-- Article Card -->
     {
       allBlogArticles.map((article) => (
-        <div class="max-w-md mx-auto mt-10">
-          <div class="bg-white rounded-lg overflow-hidden shadow-lg">
-            <a href={"/articles" + article.slug}>
-              <img
-                src={"/images/" + article.data.image}
-                alt="Article Image"
-                class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
-              />
-            </a>
-            <div class="p-6">
-              <h2 class="text-2xl font-semibold mb-2">
-                <a href={"/articles" + article.slug}>{article.data.title}</a>
-              </h2>
-              <p class="text-gray-600 text-sm mb-4">{formatDate(article.data.pubDate)}</p>
-              <div class="flex flex-wrap gap-2">
-                {article.data.tags.map((tag: string, index: number) => (
-                  <span
-                    class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90
-                      ${index % 2 === 0 ? "bg-green-500" : "bg-indigo-500"} flex items-center justify-center`}
-                  >
-                    <a href={"/articles/tag/" + tag} class="text-center"></a>{'#'+capitalize(tag)}</a>
-                  </span>
-                ))}
-              </div>
-            </div>
-          </div>
-        </div>
+        <ArticleCard article={article} />
       ))
     }
   </div>
