--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -1,20 +1,23 @@
 ---
 import { capitalize } from "../utils";
 
-const { tag, index } = Astro.props;
+const { tags } = Astro.props;
 
 interface Props {
-  tag: string;
-  index: number;
+  tags: string[];
 }
 ---
 
-<span
-  class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90 ${
-    index % 2 === 0 ? "bg-green-500" : "bg-indigo-500"
-  }`}
->
-  <a href={"/articles/tag/" + tag}>
-    {"#" + capitalize(tag)}
-</a>
-</span>
+<div class="flex flex-wrap gap-2">
+  {
+    tags.map((tag: string, index: number) => (
+      <span
+        class={`px-2 py-1 text-white rounded-full text-xs hover:opacity-90 ${
+          index % 2 === 0 ? "bg-green-500" : "bg-indigo-500"
+        }`}
+      >
+        <a href={"/articles/tag/" + tag}>{"#" + capitalize(tag)}</a>
+      </span>
+    ))
+  }
+</div>
