feat: fetch and display articles based on tags.

--- a/src/components/MostRecentArticle.astro
+++ b/src/components/MostRecentArticle.astro
@@ -31,7 +31,7 @@ interface Props {
           {
             article.data.tags.map((tag: string) => (
               <span class="px-2 py-1 border text-white rounded-full text-xs mr-2">
-                {"#" + capitalize(tag)}
+                #{capitalize(tag)}
               </span>
             ))
           }
