--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -16,7 +16,7 @@ interface Props {
           index % 2 === 0 ? "bg-green-500" : "bg-indigo-500"
         }`}
       >
-        <a href={"/articles/tag/" + tag}>{"#" + capitalize(tag)}</a>
+        <a href={"/articles/tag/" + tag}>#{capitalize(tag)}</a>
       </span>
     ))
   }
