--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,10 @@
 ---
-import MainLayout from "../../layouts/MainLayout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
-import about from "../../images/about.jpg";
-import team1 from "../../images/team1.png";
-import team2 from "../../images/team2.png";
-import team3 from "../../images/team3.png";
+import about from "../images/about.jpg";
+import team1 from "../images/team1.png";
+import team2 from "../images/team2.png";
+import team3 from "../images/team3.png";
 ---
 
 <MainLayout title="About The TechPeople Blog">
