remove: html comments.

--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,15 +1,13 @@
 ---
-const { currentPage, totalPages, disablePrevious, disableNext } = Astro.props;
+const { currentPage, disablePrevious, disableNext } = Astro.props;
 
 interface Props {
   currentPage: number;
-  totalPages: number;
   disablePrevious: boolean;
   disableNext: boolean;
 }
 ---
 
-<!-- Pagination -->
 <div class="flex justify-between mt-10">
   <a
     href={"/articles?page=" + (currentPage - 1)}
