--- a/src/pages/articles/search.astro
+++ b/src/pages/articles/search.astro
@@ -8,6 +8,7 @@ const query: string | null = Astro.url.searchParams.get("query");
 
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
 
+// Filter articles based on query
 const searchResults = allBlogArticles.filter((article) => {
   const titleMatch: boolean = article.data.title
     .toLowerCase()
