--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,6 +14,7 @@ interface Props {
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="darkreader-lock"></meta>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content={SITE_DESCRIPTION} />
