fix: logo not displayed on deployment.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,5 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../images/logo.png";
 ---
 
 <nav class="bg-gray-900 text-white">
@@ -9,7 +8,7 @@ import logo from "../images/logo.png";
   >
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <Image
-        src={logo}
+        src="/logo.png"
         class="h-14"
         alt="TechPeople Logo"
         width={55}
