--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { capitalize } from "../utils";
+import { FOOTER_DESCRIPTION, SOCIALS } from "../constants";
 
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
 
@@ -18,9 +19,7 @@ const uniqueTags: string[] = [...new Set(tags)];
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">About</h3>
         <p class="text-white text-sm">
-          TechPeople is a blog for tech enthusiasts. We publish articles,
-          stories and tutorials about the latest technology trends and
-          advancements.
+          {FOOTER_DESCRIPTION}
         </p>
       </div>
       <div class="mt-10">
@@ -38,18 +37,13 @@ const uniqueTags: string[] = [...new Set(tags)];
       <div class="mt-10">
         <h3 class="text-xl font-semibold mb-4">Contact</h3>
         <ul class="text-white text-sm">
-          <li class="mb-2">
-            <a href="#">Email</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Twitter</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Facebook</a>
-          </li>
-          <li class="mb-2">
-            <a href="#">Instagram</a>
-          </li>
+          {
+            SOCIALS.map((social) => (
+              <li class="mb-2">
+                <a href="#">{social}</a>
+              </li>
+            ))
+          }
         </ul>
       </div>
     </div>
