--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -14,7 +14,7 @@ interface Props {
     class={`inline-block px-3 py-2 rounded-lg 
     ${
       disablePrevious
-        ? "pointer-events-none bg-gray-200 text-gray-400 cursor-not-allowed"
+        ? "pointer-events-none bg-gray-200 text-gray-400"
         : "pointer-events-auto bg-indigo-100 hover:text-white hover:bg-indigo-600"
     }`}
   >
@@ -25,7 +25,7 @@ interface Props {
     class={`inline-block px-3 py-2 rounded-lg 
     ${
       disableNext
-        ? "pointer-events-none bg-gray-200 text-gray-400 cursor-not-allowed"
+        ? "pointer-events-none bg-gray-200 text-gray-400"
         : "pointer-events-auto bg-indigo-100 hover:text-white hover:bg-indigo-600"
     }`}
   >
