--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import logo from "../images/logo.png";
+import { NAV_LINKS } from "../constants";
 ---
 
 <nav class="bg-gray-900 text-white">
@@ -46,27 +47,19 @@ import logo from "../images/logo.png";
       <ul
         class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 text-white rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0"
       >
-        <li>
-          <a
-            href="/"
-            class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-            aria-current="page">Home</a
-          >
-        </li>
-        <li>
-          <a
-            href="/articles"
-            class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-            >All Articles</a
-          >
-        </li>
-        <li>
-          <a
-            href="/about"
-            class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
-            >About</a
-          >
-        </li>
+        {
+          NAV_LINKS.map((link) => (
+            <li>
+              <a
+                href={link.path}
+                class="block py-2 px-3 text-white rounded md:p-0 hover:text-indigo-400"
+                aria-current="page"
+              >
+                {link.navLink}
+              </a>
+            </li>
+          ))
+        }
       </ul>
     </div>
   </div>
