--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,19 +2,16 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import { Image } from "astro:assets";
 import error from "../images/error-404.png";
+import Button from "../components/Button.astro";
 ---
 
 <MainLayout title="404 - Page Not Found">
   <div class="flex flex-col items-center gap-7">
     <Image src={error} alt="404" height={250} width={250} class="mt-8" />
     <h1 class="text-5xl">Page Not Found</h1>
-    <p class="text-2xl">
+    <p class="text-2xl mb-6">
       Sorry, we couldn't find the page you were looking for.
     </p>
-    <a
-      href="/"
-      class="inline-block bg-gray-100 p-2 my-6 hover:bg-indigo-500 hover:text-white rounded-md"
-      >Go Back Home</a
-    >
+    <Button path="/" text="Go Back Home" />
   </div>
 </MainLayout>
