--- a/src/pages/articles/tag/[...tag].astro
+++ b/src/pages/articles/tag/[...tag].astro
@@ -5,6 +5,7 @@ import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import SearchForm from "../../../components/SearchForm.astro";
 import { capitalize } from "../../../utils";
+import Button from "../../../components/Button.astro";
 
 const { tag } = Astro.params;
 
@@ -23,12 +24,7 @@ const tagArticles = allBlogArticles.filter((article) =>
 ---
 
 <MainLayout>
-  <a
-    href="/articles"
-    class="inline-block bg-gray-100 p-2 mb-6 hover:bg-indigo-500 hover:text-white"
-    >Back To Articles</a
-  >
-
+  <Button />
   <h1 class="text-2xl pb-3">#{capitalize(tag)}</h1>
   <SearchForm />
   <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
