update: error page text responsive.

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,8 +8,8 @@ import Button from "../components/Button.astro";
 <MainLayout title="404 - Page Not Found">
   <div class="flex flex-col items-center gap-7">
     <Image src={error} alt="404" height={250} width={250} class="mt-8" />
-    <h1 class="text-5xl">Page Not Found</h1>
-    <p class="text-2xl mb-6">
+    <h1 class="text-3xl md:text-5xl">Page Not Found</h1>
+    <p class="text-xl md:text-2xl text-center mb-6">
       Sorry, we couldn't find the page you were looking for.
     </p>
     <Button path="/" text="Go Back Home" />
